--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
   <div [formGroup]="outputForm" class="w-1/2 flex flex-col">
     <div class="px-3 py-2 bg-slate-900 text-white border-b border-slate-950 flex flex-row items-center justify-between">
       <span class="font-bold">TypeScript</span>
-      <button
+      <button [cdkCopyToClipboard]="outputForm.get('code')?.value" (click)="appService.triggerCopy()"
         class=" text-gray-100 h-6 w-6 flex items-center justify-center rounded bg-emerald-500 hover:bg-emerald-400 hover:text-white">
         <i class="fa-solid fa-copy text-sm"></i>
       </button>
