--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,8 @@
 <div class="flex flex-row items-center justify-between p-3 bg-slate-950 text-white">
   <span>Transform <span class="font-bold">JSON</span> to <span class="font-bold">TypeScript</span></span>
+  <a [href]="githubUrl" target="_blank" class="text-sm text-slate-500 hover:text-emerald-500 cursor-pointer"><i
+      class="fa-brands fa-github"></i>
+    GitHub</a>
   <button [disabled]="!validInput || (appService.loading|async)" (click)="transform.emit()"
     class="bg-emerald-500 disabled:bg-red-400 hover:bg-emerald-400 hover:text-white text-sm text-gray-100 px-2 py-1 rounded-lg">Transform</button>
 </div>
